# gguf_loader

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
include/: .gitignore  ggml.h
src/: ggml-backend.cpp  ggml-quants.c  ggml.c  gguf.cpp
test/: test-gguf.cpp
